--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -9,10 +9,24 @@
 
 .heading-2 {
     @extend %heading;
+    font-size: 4rem;
+    font-style: italic;
+    line-height: 1;
+
+    &--light {
+        color: $color-grey-light-1;
+    }
+
+    &--dark {
+        color: $color-grey-dark-1;
+    }
 }
 
 .heading-3 {
     @extend %heading;
+    font-size: 1.6rem;
+    color: $color-primary;
+    text-transform: uppercase;
 }
 
 .heading-4 {
@@ -26,4 +40,38 @@
     &--dark {
         color: $color-grey-dark-1;
     }
+}
+
+.btn {
+    background-color: $color-primary;
+    color: #fff;
+    border: none;
+    border-radius: 0;
+    font-family: $font-display;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    padding: 1.8rem 3rem;
+    cursor: pointer;
+    transition: all .2s;
+
+    &:hover {
+        background-color: $color-primary-dark;
+    }
+}
+
+// Helper clasess for margin-bottom
+.mb-s {
+    margin-bottom: 2rem;
+}
+
+.mb-m {
+    margin-bottom: 3rem;
+}
+
+.mb-l {
+    margin-bottom: 4rem;
+}
+
+.mb-xl {
+    margin-bottom: 8rem;
 }
