--- a/styles/main.css
+++ b/styles/main.css
@@ -309,6 +309,36 @@ body {
 .footer {
   background-color: #101D2C;
   grid-column: full-start/full-end;
+  padding: 8rem;
+}
+.footer .nav {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  grid-gap: 2rem;
+  align-items: center;
+}
+.footer .nav__link:link, .footer .nav__link:visited {
+  text-decoration: none;
+  font-size: 1.4rem;
+  color: #FFF;
+  font-family: "Josefin Sans", sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 1.5rem;
+  display: block;
+  transition: all 0.2s;
+}
+.footer .nav__link:hover, .footer .nav__link:active {
+  background-color: rgba(255, 255, 255, 0.05);
+  transform: translateY(-3px);
+}
+.footer .copyright {
+  font-size: 1.4rem;
+  color: #AAA;
+  margin: 6rem auto 0 auto;
+  text-align: center;
+  width: 80%;
 }
 
 /*# sourceMappingURL=main.css.map */
