Add media queries

--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -9,6 +9,10 @@
     grid-row-gap: 2rem;
     justify-items: center;
 
+    @media only screen and (max-width: $breakpoint-m) {
+        grid-column: 1 / -1;
+    }
+
     &__list {
         display: grid;
         grid-template-columns: min-content max-content;
@@ -16,6 +20,13 @@
         grid-row-gap: 5vh;
         align-items: center;
         
+        @media only screen and (max-width: $breakpoint-m) {
+            grid-template-columns: repeat(3, min-content max-content);
+        }
+
+        @media only screen and (max-width: $breakpoint-s) {
+            grid-template-columns: min-content max-content;
+        }
     }
 
     &__img {
