--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -3,11 +3,17 @@
         background-color: $color-primary;
         grid-column: full-start / col-end 4;
         background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url(../images/back.jpg);
+        background-size: cover;
 
         display: grid;
         grid-template-rows: repeat(6, 1fr);
         grid-template-columns: repeat(6, 1fr);
         align-items: center;
+
+        @media only screen and (max-width: $breakpoint-m) {
+            grid-column: 1 / -1;
+            padding: 6rem;
+        }
     }
 
     &__img--1 {
@@ -15,6 +21,11 @@
         grid-row: 2 / 6;
         grid-column: 2 / 6;
         box-shadow: 0 2rem 5rem rgba(0, 0, 0, .1);
+
+        @media only screen and (max-width: $breakpoint-m) {
+            grid-column: 1 / 4;
+            grid-row: 1 / -1;
+        }
     }
 
     &__img--2 {
@@ -24,6 +35,11 @@
         box-shadow: 0 2rem 5rem rgba(0, 0, 0, .2);
         width: 115%;
         z-index: 10;
+
+        @media only screen and (max-width: $breakpoint-m) {
+            grid-row: 1 / -1;
+            width: 100%;
+        }
     }
 
     &__content {
@@ -35,6 +51,11 @@
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
+
+        @media only screen and (max-width: $breakpoint-m) {
+            grid-column: 1 / -1;
+            grid-row: 5 / 6;
+        }
     }
 
     &__text {
