--- a/styles/main.css
+++ b/styles/main.css
@@ -3,81 +3,62 @@
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
-}
+  box-sizing: inherit; }
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%;
-}
-@media only screen and (max-width: 75em) {
-  html {
-    font-size: 50%;
-  }
-}
+  font-size: 62.5%; }
+  @media only screen and (max-width: 75em) {
+    html {
+      font-size: 50%; } }
 
 body {
   font-family: "Nunito", sans-serif;
   color: #6D5D4B;
   font-weight: 300;
-  line-height: 1.6;
-}
+  line-height: 1.6; }
 
 .container {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
-  grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
-}
-@media only screen and (max-width: 62.5em) {
-  .container {
-    grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
-    grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
-  }
-}
-@media only screen and (max-width: 50em) {
-  .container {
-    grid-template-rows: 6rem calc(100vh - 6rem);
-  }
-}
+  grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
+  @media only screen and (max-width: 62.5em) {
+    .container {
+      grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+      grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; } }
+  @media only screen and (max-width: 50em) {
+    .container {
+      grid-template-rows: 6rem calc(100vh - 6rem); } }
 
-.heading-4, .heading-3, .heading-2, .heading-1 {
+.heading-1, .heading-2, .heading-3, .heading-4 {
   font-family: "Josefin Sans", sans-serif;
-  font-weight: 400;
-}
+  font-weight: 400; }
 
 .heading-1 {
   font-size: 4.5rem;
   color: #F9F7F6;
-  line-height: 1;
-}
+  line-height: 1; }
 
 .heading-2 {
   font-size: 4rem;
   font-style: italic;
-  line-height: 1;
-}
-.heading-2--light {
-  color: #F9F7F6;
-}
-.heading-2--dark {
-  color: #54483A;
-}
+  line-height: 1; }
+  .heading-2--light {
+    color: #F9F7F6; }
+  .heading-2--dark {
+    color: #54483A; }
 
 .heading-3 {
   font-size: 1.6rem;
   color: #C69963;
-  text-transform: uppercase;
-}
+  text-transform: uppercase; }
 
 .heading-4 {
-  font-size: 1.9rem;
-}
-.heading-4--light {
-  color: #F9F7F6;
-}
-.heading-4--dark {
-  color: #54483A;
-}
+  font-size: 1.9rem; }
+  .heading-4--light {
+    color: #F9F7F6; }
+  .heading-4--dark {
+    color: #54483A; }
 
 .btn {
   background-color: #C69963;
@@ -89,43 +70,34 @@ body {
   text-transform: uppercase;
   padding: 1.8rem 3rem;
   cursor: pointer;
-  transition: all 0.2s;
-}
-.btn:hover {
-  background-color: #B28451;
-}
+  transition: all .2s; }
+  .btn:hover {
+    background-color: #B28451; }
 
 .mb-s {
-  margin-bottom: 2rem;
-}
+  margin-bottom: 2rem; }
 
 .mb-m {
-  margin-bottom: 3rem;
-}
+  margin-bottom: 3rem; }
 
 .mb-l {
-  margin-bottom: 4rem;
-}
+  margin-bottom: 4rem; }
 
 .mb-xl {
-  margin-bottom: 8rem;
-}
+  margin-bottom: 8rem; }
 
 .sidebar {
   background-color: #C69963;
-  grid-column: sidebar-start/sidebar-end;
-  grid-row: 1/-1;
+  grid-column: sidebar-start / sidebar-end;
+  grid-row: 1 / -1;
   display: flex;
-  justify-content: center;
-}
-@media only screen and (max-width: 62.5em) {
-  .sidebar {
-    grid-column: 1/-1;
-    grid-row: 1/2;
-    justify-content: flex-end;
-    align-items: center;
-  }
-}
+  justify-content: center; }
+  @media only screen and (max-width: 62.5em) {
+    .sidebar {
+      grid-column: 1 / -1;
+      grid-row: 1 / 2;
+      justify-content: flex-end;
+      align-items: center; } }
 
 .nav-btn {
   border: none;
@@ -133,36 +105,28 @@ body {
   background-color: #FFF;
   height: 2px;
   width: 4.5rem;
-  margin-top: 4rem;
-}
-.nav-btn::before, .nav-btn::after {
-  content: "";
-  display: block;
-  background-color: #FFF;
-  height: 2px;
-  width: 4.5rem;
-}
-.nav-btn::before {
-  transform: translateY(-1.5rem);
-}
-.nav-btn::after {
-  transform: translateY(1.3rem);
-}
-@media only screen and (max-width: 62.5em) {
-  .nav-btn {
-    margin-top: 0;
-    margin-right: 3rem;
-  }
+  margin-top: 4rem; }
+  .nav-btn::before, .nav-btn::after {
+    content: "";
+    display: block;
+    background-color: #FFF;
+    height: 2px;
+    width: 4.5rem; }
   .nav-btn::before {
-    transform: translateY(-1.2rem);
-  }
+    transform: translateY(-1.5rem); }
   .nav-btn::after {
-    transform: translateY(1rem);
-  }
-}
+    transform: translateY(1.3rem); }
+  @media only screen and (max-width: 62.5em) {
+    .nav-btn {
+      margin-top: 0;
+      margin-right: 3rem; }
+      .nav-btn::before {
+        transform: translateY(-1.2rem); }
+      .nav-btn::after {
+        transform: translateY(1rem); } }
 
 .header {
-  grid-column: full-start/col-end 6;
+  grid-column: full-start / col-end 6;
   background-color: #54483A;
   background-image: linear-gradient(rgba(16, 29, 44, 0.93), rgba(16, 29, 44, 0.93)), url(../images/hero.jpeg);
   background-size: cover;
@@ -172,355 +136,292 @@ body {
   grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
   grid-template-columns: minmax(min-content, max-content);
   grid-row-gap: 1.5rem;
-  justify-content: center;
-}
-@media only screen and (max-width: 50em) {
-  .header {
-    grid-column: 1/-1;
-  }
-}
-@media only screen and (max-width: 37.5em) {
-  .header {
-    padding: 5rem;
-  }
-}
-.header__logo {
-  height: 3rem;
-  justify-self: center;
-}
-.header__btn {
-  align-self: start;
-  justify-self: start;
-}
-.header__seenon-text {
-  display: grid;
-  grid-template-columns: 1fr max-content 1fr;
-  grid-column-gap: 1.5rem;
-  align-items: center;
-  font-size: 1.6rem;
-  color: #AAA;
-}
-.header__seenon-text::before, .header__seenon-text::after {
-  content: "";
-  display: block;
-  height: 1px;
-  background-color: currentColor;
-}
-.header__seenon-logos {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-column-gap: 3rem;
-  justify-items: center;
-  align-items: center;
-}
-.header__seenon-logos img {
-  max-height: 2.5rem;
-  max-width: 100%;
-  filter: brightness(70%);
-}
+  justify-content: center; }
+  @media only screen and (max-width: 50em) {
+    .header {
+      grid-column: 1 / -1; } }
+  @media only screen and (max-width: 37.5em) {
+    .header {
+      padding: 5rem; } }
+  .header__logo {
+    height: 3rem;
+    justify-self: center; }
+  .header__btn {
+    align-self: start;
+    justify-self: start; }
+  .header__seenon-text {
+    display: grid;
+    grid-template-columns: 1fr max-content 1fr;
+    grid-column-gap: 1.5rem;
+    align-items: center;
+    font-size: 1.6rem;
+    color: #AAA; }
+    .header__seenon-text::before, .header__seenon-text::after {
+      content: "";
+      display: block;
+      height: 1px;
+      background-color: currentColor; }
+  .header__seenon-logos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 3rem;
+    justify-items: center;
+    align-items: center; }
+    .header__seenon-logos img {
+      max-height: 2.5rem;
+      max-width: 100%;
+      filter: brightness(70%); }
 
 .realtors {
   background-color: #101D2C;
-  grid-column: col-start 7/full-end;
+  grid-column: col-start 7 / full-end;
   padding: 3rem;
   display: grid;
   align-content: center;
   justify-content: center;
   grid-row-gap: 2rem;
-  justify-items: center;
-}
-@media only screen and (max-width: 50em) {
-  .realtors {
-    grid-column: 1/-1;
-  }
-}
-.realtors__list {
-  display: grid;
-  grid-template-columns: min-content max-content;
-  grid-column-gap: 2rem;
-  grid-row-gap: 5vh;
-  align-items: center;
-}
-@media only screen and (max-width: 50em) {
+  justify-items: center; }
+  @media only screen and (max-width: 50em) {
+    .realtors {
+      grid-column: 1 / -1; } }
   .realtors__list {
-    grid-template-columns: repeat(3, min-content max-content);
-  }
-}
-@media only screen and (max-width: 37.5em) {
-  .realtors__list {
+    display: grid;
     grid-template-columns: min-content max-content;
-  }
-}
-.realtors__img {
-  width: 7rem;
-  border-radius: 50%;
-  display: block;
-}
-.realtors__sold {
-  text-transform: uppercase;
-  color: #AAA;
-  margin-top: -3px;
-}
+    grid-column-gap: 2rem;
+    grid-row-gap: 5vh;
+    align-items: center; }
+    @media only screen and (max-width: 50em) {
+      .realtors__list {
+        grid-template-columns: repeat(3, min-content max-content); } }
+    @media only screen and (max-width: 37.5em) {
+      .realtors__list {
+        grid-template-columns: min-content max-content; } }
+  .realtors__img {
+    width: 7rem;
+    border-radius: 50%;
+    display: block; }
+  .realtors__sold {
+    text-transform: uppercase;
+    color: #AAA;
+    margin-top: -3px; }
 
 .features {
-  grid-column: center-start/center-end;
+  grid-column: center-start / center-end;
   margin: 15rem 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   grid-gap: 6rem;
-  align-items: start;
-}
+  align-items: start; }
 
 .feature {
   display: grid;
   grid-template-columns: min-content 1fr;
   grid-row-gap: 1.5rem;
-  grid-column-gap: 2.5rem;
-}
-.feature__icon {
-  fill: #C69963;
-  height: 4.5rem;
-  width: 4.5rem;
-  grid-row: 1/span 2;
-  transform: translateY(-1rem);
-}
-.feature__text {
-  font-size: 1.7rem;
-}
+  grid-column-gap: 2.5rem; }
+  .feature__icon {
+    fill: #C69963;
+    height: 4.5rem;
+    width: 4.5rem;
+    grid-row: 1 / span 2;
+    transform: translateY(-1rem); }
+  .feature__text {
+    font-size: 1.7rem; }
 
 .story__pictures {
   background-color: #C69963;
-  grid-column: full-start/col-end 4;
+  grid-column: full-start / col-end 4;
   background-image: linear-gradient(rgba(198, 153, 99, 0.5), rgba(198, 153, 99, 0.5)), url(../images/back.jpg);
   background-size: cover;
   display: grid;
   grid-template-rows: repeat(6, 1fr);
   grid-template-columns: repeat(6, 1fr);
-  align-items: center;
-}
-@media only screen and (max-width: 50em) {
-  .story__pictures {
-    grid-column: 1/-1;
-    padding: 6rem;
-  }
-}
+  align-items: center; }
+  @media only screen and (max-width: 50em) {
+    .story__pictures {
+      grid-column: 1 / -1;
+      padding: 6rem; } }
+
 .story__img--1 {
   width: 100%;
-  grid-row: 2/6;
-  grid-column: 2/6;
-  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
-}
-@media only screen and (max-width: 50em) {
-  .story__img--1 {
-    grid-column: 1/4;
-    grid-row: 1/-1;
-  }
-}
+  grid-row: 2 / 6;
+  grid-column: 2 / 6;
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1); }
+  @media only screen and (max-width: 50em) {
+    .story__img--1 {
+      grid-column: 1 / 4;
+      grid-row: 1 / -1; } }
+
 .story__img--2 {
   width: 100%;
-  grid-row: 4/6;
-  grid-column: 4/7;
+  grid-row: 4 / 6;
+  grid-column: 4 / 7;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
   width: 115%;
-  z-index: 10;
-}
-@media only screen and (max-width: 50em) {
-  .story__img--2 {
-    grid-row: 1/-1;
-    width: 100%;
-  }
-}
+  z-index: 10; }
+  @media only screen and (max-width: 50em) {
+    .story__img--2 {
+      grid-row: 1 / -1;
+      width: 100%; } }
+
 .story__content {
   background-color: #F9F7F6;
-  grid-column: col-start 5/full-end;
+  grid-column: col-start 5 / full-end;
   padding: 6rem 8vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-}
-@media only screen and (max-width: 50em) {
-  .story__content {
-    grid-column: 1/-1;
-    grid-row: 5/6;
-  }
-}
+  align-items: flex-start; }
+  @media only screen and (max-width: 50em) {
+    .story__content {
+      grid-column: 1 / -1;
+      grid-row: 5 / 6; } }
+
 .story__text {
   font-size: 1.5rem;
   font-style: italic;
-  margin-bottom: 4rem;
-}
+  margin-bottom: 4rem; }
 
 .homes {
-  grid-column: center-start/center-end;
+  grid-column: center-start / center-end;
   margin: 15rem 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  grid-gap: 7rem;
-}
+  grid-gap: 7rem; }
 
 .home {
   background-color: #F9F7F6;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 3.5rem;
-}
-.home__img {
-  width: 100%;
-  grid-column: 1/-1;
-  grid-row: 1/2;
-  z-index: 10;
-}
-.home__like {
-  fill: #C69963;
-  grid-row: 1/2;
-  grid-column: 2/3;
-  justify-self: end;
-  margin: 1rem;
-  height: 2.5rem;
-  width: 2.5rem;
-  z-index: 20;
-}
-.home__name {
-  grid-row: 1/2;
-  grid-column: 1/-1;
-  width: 80%;
-  justify-self: center;
-  align-self: end;
-  font-family: "Josefin Sans", sans-serif;
-  font-size: 1.6rem;
-  text-align: center;
-  padding: 1.25rem;
-  background-color: #101D2C;
-  color: #FFF;
-  font-weight: 400;
-  z-index: 20;
-  transform: translateY(50%);
-}
-.home__location, .home__rooms {
-  margin-top: 2.5rem;
-}
-.home__location, .home__rooms, .home__area, .home__price {
-  font-size: 1.5rem;
-  margin-left: 2rem;
-  display: flex;
-  align-items: center;
-}
-.home__location svg, .home__rooms svg, .home__area svg, .home__price svg {
-  height: 2rem;
-  width: 2rem;
-  margin-right: 1rem;
-  fill: #C69963;
-}
-.home__btn {
-  grid-column: 1/-1;
-}
+  grid-gap: 3.5rem; }
+  .home__img {
+    width: 100%;
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    z-index: 10; }
+  .home__like {
+    fill: #C69963;
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    justify-self: end;
+    margin: 1rem;
+    height: 2.5rem;
+    width: 2.5rem;
+    z-index: 20; }
+  .home__name {
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+    width: 80%;
+    justify-self: center;
+    align-self: end;
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 1.6rem;
+    text-align: center;
+    padding: 1.25rem;
+    background-color: #101D2C;
+    color: #FFF;
+    font-weight: 400;
+    z-index: 20;
+    transform: translateY(50%); }
+  .home__location, .home__rooms {
+    margin-top: 2.5rem; }
+  .home__location, .home__rooms, .home__area, .home__price {
+    font-size: 1.5rem;
+    margin-left: 2rem;
+    display: flex;
+    align-items: center; }
+    .home__location svg, .home__rooms svg, .home__area svg, .home__price svg {
+      height: 2rem;
+      width: 2rem;
+      margin-right: 1rem;
+      fill: #C69963; }
+  .home__btn {
+    grid-column: 1 / -1; }
 
 .gallery {
   background-color: #F9F7F6;
-  grid-column: full-start/full-end;
+  grid-column: full-start / full-end;
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(7, 5vw);
   grid-gap: 1.5rem;
-  padding: 1.5rem;
-}
-.gallery__item--1 {
-  grid-row: 1/span 2;
-  grid-column: 1/span 2;
-}
-.gallery__item--2 {
-  grid-row: 1/span 3;
-  grid-column: 3/span 3;
-}
-.gallery__item--3 {
-  grid-row: 1/span 2;
-  grid-column: 6/7;
-}
-.gallery__item--4 {
-  grid-row: 1/span 2;
-  grid-column: 7/span 2;
-}
-.gallery__item--5 {
-  grid-row: 3/span 3;
-  grid-column: 1/span 2;
-}
-.gallery__item--6 {
-  grid-row: 4/span 2;
-  grid-column: 3/span 2;
-}
-.gallery__item--7 {
-  grid-row: 4/5;
-  grid-column: 5/6;
-}
-.gallery__item--8 {
-  grid-row: 3/span 2;
-  grid-column: 6/span 2;
-}
-.gallery__item--9 {
-  grid-row: 3/span 3;
-  grid-column: 8/9;
-}
-.gallery__item--10 {
-  grid-row: 6/span 2;
-  grid-column: 1/2;
-}
-.gallery__item--11 {
-  grid-row: 6/span 2;
-  grid-column: 2/span 2;
-}
-.gallery__item--12 {
-  grid-row: 6/span 2;
-  grid-column: 4/5;
-}
-.gallery__item--13 {
-  grid-row: 5/span 3;
-  grid-column: 5/span 3;
-}
-.gallery__item--14 {
-  grid-row: 6/span 2;
-  grid-column: 8/9;
-}
-.gallery__img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+  padding: 1.5rem; }
+  .gallery__item--1 {
+    grid-row: 1 / span 2;
+    grid-column: 1 / span 2; }
+  .gallery__item--2 {
+    grid-row: 1 / span 3;
+    grid-column: 3 / span 3; }
+  .gallery__item--3 {
+    grid-row: 1 / span 2;
+    grid-column: 6 / 7; }
+  .gallery__item--4 {
+    grid-row: 1 / span 2;
+    grid-column: 7 / span 2; }
+  .gallery__item--5 {
+    grid-row: 3 / span 3;
+    grid-column: 1 / span 2; }
+  .gallery__item--6 {
+    grid-row: 4 / span 2;
+    grid-column: 3 / span 2; }
+  .gallery__item--7 {
+    grid-row: 4 / 5;
+    grid-column: 5 / 6; }
+  .gallery__item--8 {
+    grid-row: 3 / span 2;
+    grid-column: 6 / span 2; }
+  .gallery__item--9 {
+    grid-row: 3 / span 3;
+    grid-column: 8 / 9; }
+  .gallery__item--10 {
+    grid-row: 6 / span 2;
+    grid-column: 1 / 2; }
+  .gallery__item--11 {
+    grid-row: 6 / span 2;
+    grid-column: 2 / span 2; }
+  .gallery__item--12 {
+    grid-row: 6 / span 2;
+    grid-column: 4 / 5; }
+  .gallery__item--13 {
+    grid-row: 5 / span 3;
+    grid-column: 5 / span 3; }
+  .gallery__item--14 {
+    grid-row: 6 / span 2;
+    grid-column: 8 / 9; }
+  .gallery__img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
 
 .footer {
   background-color: #101D2C;
-  grid-column: full-start/full-end;
-  padding: 8rem;
-}
-.footer .nav {
-  list-style: none;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-  grid-gap: 2rem;
-  align-items: center;
-}
-.footer .nav__link:link, .footer .nav__link:visited {
-  text-decoration: none;
-  font-size: 1.4rem;
-  color: #FFF;
-  font-family: "Josefin Sans", sans-serif;
-  text-transform: uppercase;
-  text-align: center;
-  padding: 1.5rem;
-  display: block;
-  transition: all 0.2s;
-}
-.footer .nav__link:hover, .footer .nav__link:active {
-  background-color: rgba(255, 255, 255, 0.05);
-  transform: translateY(-3px);
-}
-.footer .copyright {
-  font-size: 1.4rem;
-  color: #AAA;
-  margin: 6rem auto 0 auto;
-  text-align: center;
-  width: 80%;
-}
-
-/*# sourceMappingURL=main.css.map */
+  grid-column: full-start / full-end;
+  padding: 8rem; }
+  .footer .nav {
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    grid-gap: 2rem;
+    align-items: center; }
+    .footer .nav__link:link, .footer .nav__link:visited {
+      text-decoration: none;
+      font-size: 1.4rem;
+      color: #fff;
+      font-family: "Josefin Sans", sans-serif;
+      text-transform: uppercase;
+      text-align: center;
+      padding: 1.5rem;
+      display: block;
+      transition: all 0.2s; }
+    .footer .nav__link:hover, .footer .nav__link:active {
+      background-color: rgba(255, 255, 255, 0.05);
+      transform: translateY(-3px); }
+  .footer .copyright {
+    font-size: 1.4rem;
+    color: #AAA;
+    margin: 6rem auto 0 auto;
+    text-align: center;
+    width: 80%; }
+    .footer .copyright a {
+      color: #C69963;
+      text-decoration: none; }
