--- a/styles/main.css
+++ b/styles/main.css
@@ -70,7 +70,7 @@ body {
   font-family: objektiv-mk1, sans-serif;
   font-size: 1.5rem;
   text-transform: uppercase;
-  padding: 1.8rem 3rem;
+  padding: 2.4rem 3rem 1.8rem 3rem;
   cursor: pointer;
   transition: all 0.2s; }
   .btn:hover {
@@ -104,14 +104,14 @@ body {
 .nav-btn {
   border: none;
   border-radius: 0;
-  background-color: #FFF;
+  background-color: #fff;
   height: 2px;
   width: 4.5rem;
   margin-top: 4rem; }
   .nav-btn::before, .nav-btn::after {
-    content: "";
+    content: '';
     display: block;
-    background-color: #FFF;
+    background-color: #fff;
     height: 2px;
     width: 4.5rem; }
   .nav-btn::before {
@@ -159,7 +159,7 @@ body {
     font-size: 1.6rem;
     color: #aaa; }
     .header__seenon-text::before, .header__seenon-text::after {
-      content: "";
+      content: '';
       display: block;
       height: 1px;
       background-color: currentColor; }
@@ -319,7 +319,7 @@ body {
     text-align: center;
     padding: 1.25rem;
     background-color: #101d2c;
-    color: #FFF;
+    color: #fff;
     font-weight: 400;
     z-index: 20;
     transform: translateY(50%); }
